scss/base/_type.scss
@if $use-typography == true {
  //------------------------------------
  //  TYPE
  //------------------------------------

  // Variables
  $small-size: 12px !default;
  $micro-size: 10px !default;


  // Links
  a {
    color: $base-link-color;
    text-decoration: none;

    &:hover,
    &:visited {
      color: lighten($base-link-color, 10%);
      cursor: pointer;
      text-decoration: underline;
    }

    p & {
      &,
      &:visited { line-height: inherit; }
    }
  }


  // Sizing
  small,
  .small {
    @include font-size($small-size);
  }

  .micro {
    @include font-size($micro-size);
  }


  // Addresses
  address { font-style: normal; }


  // Other elements
  abbr {
    &[title], &[data-original-title] {
      cursor: help;
      border-bottom: 1px dotted #999;
    }
  }

  acronym {
    cursor: help;
    border-bottom: 1px dashed blue;
  }

  kbd {
    background-color: #333;
    border-radius: 4px;
    color: #fff;
    font-size: 90%;
    padding: 1px 4px;
  }
}

